# esp-bsp

./: .build-test-rules.yml  .codespellrc  .editorconfig  .flake8  .gitignore  .gitmodules  .idf_build_apps.toml  .ignore_build_warnings.txt  .pre-commit-config.yaml  BSP_development_guide.md  CONTRIBUTING.md  Containerfile  Doxyfile  LCD.md  README.md  check_copyright_config.yaml  conftest.py  pre-commit-config.yaml  pytest.ini
bsp/echoear/: API.md  CMakeLists.txt  Kconfig  README.md  echoear.json  idf_component.yml
bsp/echoear/src/: bsp_audio.c  bsp_button.c  bsp_display.c  bsp_feature_en.c  bsp_i2c.c  bsp_led.c  bsp_storage.c  echoear.c
bsp/esp32_c3_lcdkit/: API.md  CMakeLists.txt  Kconfig  README.md  esp32_c3_lcdkit.c  esp32_c3_lcdkit.json  idf_component.yml
bsp/esp32_c3_lcdkit/priv_include/: bsp_err_check.h
bsp/esp32_c3_lcdkit/src/: esp32_c3_lcdkit.c  led_blink_defaults.c
bsp/esp32_lyrat/: API.md  CMakeLists.txt  README.md  esp32_lyrat.c  idf_component.yml
bsp/esp32_p4_eye/: API.md  CMakeLists.txt  Kconfig  README.md  esp32_p4_eye.c  esp32_p4_eye.json  idf_component.yml
bsp/esp32_p4_eye/src/: esp32_p4_eye.c
bsp/esp32_p4_function_ev_board/: API.md  CMakeLists.txt  Kconfig  README.md  benchmark.json  esp32_p4_function_ev_board.c  idf_component.yml
bsp/esp32_s3_eye/: API.md  CMakeLists.txt  Kconfig  README.md  esp32_s3_eye.c  esp32_s3_eye.json  idf_component.yml
bsp/esp32_s3_eye/priv_include/: bsp_err_check.h
bsp/esp32_s3_eye/src/: bsp_adc.c  bsp_audio.c  bsp_button.c  bsp_camera.c  bsp_display.c  bsp_i2c.c  bsp_led.c  bsp_storage.c  esp32_s3_eye.c  led_blink_defaults.c
bsp/esp32_s3_korvo_1/: API.md  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  esp32_s3_korvo_1.c  esp32_s3_korvo_1_idf4.c  esp32_s3_korvo_1_idf5.c  idf_component.yml  led_blink_defaults.c
bsp/esp32_s3_usb_otg/: API.md  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  esp32_s3_usb_otg.c  esp32_s3_usb_otg_idf4.c  esp32_s3_usb_otg_idf5.c  idf_component.yml
bsp/esp_bsp_devkit/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
bsp/esp_bsp_devkit/src/: esp_bsp_devkit.c  led_blink_defaults.c
bsp/esp_sensairshuttle/: API.md  CMakeLists.txt  Kconfig  README.md  esp_sensairshuttle.json  idf_component.yml
bsp/esp_sensairshuttle/src/: bsp_audio.c  bsp_button.c  bsp_display.c  bsp_feature_en.c  bsp_i2c.c  bsp_led.c  bsp_sensors.c  bsp_storage.c  led_blink_defaults.c
bsp/m5stack_core_s3/: API.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  m5stack_core_s3.c  m5stack_core_s3.json  m5stack_core_s3_idf5.c
bsp/m5stack_core_s3/src/: bsp_audio.c  bsp_camera.c  bsp_display.c  bsp_feature_en.c  bsp_i2c.c  bsp_io_expander.c  bsp_sensors.c  bsp_spi.c  bsp_storage.c  bsp_usb.c
bsp/m5stack_tab5/: API.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  m5stack_tab5.c  m5stack_tab5.json
bsp/m5stack_tab5/priv_include/: bsp_err_check.h  disp_init_data.h  disp_init_data_1.h  ili9881_init_data.h
bsp/m5stack_tab5/src/: bsp_audio.c  bsp_camera.c  bsp_display.c  bsp_feature_en.c  bsp_i2c.c  bsp_io_expander.c  bsp_sensors.c  bsp_storage.c  bsp_usb.c  m5stack_tab5.c
components/bsp_graphics/bsp_graphics_lvgl/: CMakeLists.txt  README.md  idf_component.yml
components/esp_jpeg/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  jpeg_decoder.c
components/esp_jpeg/include/: jpeg_decoder.h
components/esp_jpeg/tjpgd/: tjpgdcnf.h
components/esp_lvgl_port/: CHANGELOG.md  CMakeLists.txt  CMakeLists_v2.txt  Kconfig  README.md  esp_lvgl_port.c  esp_lvgl_port_fs.c  esp_lvgl_rgb.c  idf_component.yml  project_include.cmake
components/esp_lvgl_port/docs/: performance.md
components/esp_lvgl_port/include/: bsp_ppa.h  esp_lvgl_port.h  esp_lvgl_port_button.h  esp_lvgl_port_compatibility.h  esp_lvgl_port_disp.h  esp_lvgl_port_knob.h  esp_lvgl_port_lv_blend.h  esp_lvgl_port_lv_blend_ppa.h  esp_lvgl_port_touch.h  esp_lvgl_port_usbhid.h
components/esp_lvgl_port/priv_include/: esp_lvgl_port_priv.h  esp_lvgl_rgb.h
components/icm42670/: CMakeLists.txt  README.md  icm42670.c  idf_component.yml
components/icm42670/include/: icm42670.h
components/icm42670/test_apps/: CMakeLists.txt  sdkconfig.defaults
components/io_expander/esp_io_expander/: CMakeLists.txt  Kconfig  README.md  esp_gpio_wrapper.c  esp_io_expander.c  esp_io_expander_gpio_wrapper.c  esp_io_expander_gpio_wrapper_weak.c  idf_component.yml
components/lcd/esp_lcd_st7796/: CMakeLists.txt  README.md  esp_lcd_st7796.c  esp_lcd_st7796_general.c  esp_lcd_st7796_mipi.c  idf_component.yml
components/mag3110/: CMakeLists.txt  README.md  idf_component.yml  mag3110.c
components/mag3110/include/: mag3110.h
components/mag3110/test/: CMakeLists.txt  mag3110_test.c
components/mpu60xx/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  mpu60xx.c
components/mpu60xx/include/: mpu60xx.h  mpu60xx_interrupts.h  mpu60xx_regs_bits.h  mpu60xx_types.h
components/mpu60xx/private/: mpu60xx_pvt.c
components/mpu60xx/srcs/: mpu60xx.c  mpu60xx_interrupts.c  mpu60xx_regs_bits.c
components/sensors/aht30/: CMakeLists.txt  README.md  aht30.c  idf_component.yml
components/sensors/bmi270/: CMakeLists.txt  README.md  idf_component.yml
esp32_s2_kaluga_kit/: CMakeLists.txt  Kconfig  README.md  esp32_s2_kaluga_kit.c  idf_component.yml  sdkconfig.defaults
esp32_s2_kaluga_kit/examples/display_audio/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
esp32_s2_kaluga_kit/include/: esp32_s2_kaluga_kit.h
esp32_s2_kaluga_kit/include/bsp/: esp-bsp.h  esp32_s2_kaluga_kit.h
esp32_s3_korvo_2/: CMakeLists.txt  Kconfig  README.md  esp32_s3_korvo_2.c  esp32_s3_korvo_2_idf4.c  idf_component.yml
esp32_s3_korvo_2/include/bsp/: esp-bsp.h  esp32_s3_korvo_2.h
esp32_s3_korvo_2/priv_include/: bsp_err_check.h
examples/display/main/: CMakeLists.txt  display_main.c  esp_logo.c  esp_text.c  idf_component.yml  lvgl_demo_ui.c  main.c  mmap_generate_images.h
examples/display_lvgl_demos/main/: CMakeLists.txt  dispaly_lvgl_demos_main.c  display_lvgl_demos_main.c  idf_component.yml  main.c
examples/display_rotation/main/: CMakeLists.txt  main.c  (+1 more)
(+1508 files in other folders)
